--- a/system/system-support/pom.xml
+++ b/system/system-support/pom.xml
@@ -46,6 +46,10 @@
             <version>1.1.21</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.yang</groupId>
             <artifactId>system-client</artifactId>
             <version>1.0-SNAPSHOT</version>
