--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
     <artifactId>parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>concrete1</module>
         <module>baseframe</module>
         <module>system</module>
+        <module>gateway</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -21,6 +21,13 @@
         <spring-cloud-nacos-config>2.1.0.RELEASE</spring-cloud-nacos-config>
         <spring-cloud-openfeign>2.1.1.RELEASE</spring-cloud-openfeign>
         <spring-cloud-nacos-discovery>2.1.0.RELEASE</spring-cloud-nacos-discovery>
+        <mybatis-plus-boot-starter>3.3.1</mybatis-plus-boot-starter>
+        <mybatis-plus-generator>3.3.1</mybatis-plus-generator>
+        <druid-spring-boot-starter>1.1.21</druid-spring-boot-starter>
+        <freemarker>2.3.23</freemarker>
+        <springfox-boot-starter>3.0.0</springfox-boot-starter>
+        <spring-plugin-core>2.0.0.RELEASE</spring-plugin-core>
+        <swagger-bootstrap-ui>1.9.6</swagger-bootstrap-ui>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -57,6 +64,46 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!--mybatis-plus 包引入-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus-boot-starter}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-generator</artifactId>
+                <version>${mybatis-plus-generator}</version>
+            </dependency>
+            <!--连接池-->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid-spring-boot-starter}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker}</version>
+            </dependency>
+            <!--swagger文档-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-boot-starter</artifactId>
+                <version>${springfox-boot-starter}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.plugin</groupId>
+                <artifactId>spring-plugin-core</artifactId>
+                <version>${spring-plugin-core}</version>
+            </dependency>
+            <!-- swagger第三方的UI库 -->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger-bootstrap-ui}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
