--- a/gateway/gateway-support/src/main/resources/bootstrap.yml
+++ b/gateway/gateway-support/src/main/resources/bootstrap.yml
@@ -1,12 +1,12 @@
 spring:
   application:
-    name: system
+    name: gateway
   profiles:
     active: dev
   cloud:
     nacos:
       config:
-        group: system-support
+        group: gateway-support
         file-extension: yml
         server-addr: 127.0.0.1:8848
       discovery:
