--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <springfox-boot-starter>3.0.0</springfox-boot-starter>
         <spring-plugin-core>2.0.0.RELEASE</spring-plugin-core>
         <swagger-bootstrap-ui>1.9.6</swagger-bootstrap-ui>
+        <spring-cloud-starter-gateway>2.1.3.RELEASE</spring-cloud-starter-gateway>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -103,7 +104,12 @@
                 <artifactId>swagger-bootstrap-ui</artifactId>
                 <version>${swagger-bootstrap-ui}</version>
             </dependency>
-
+            <!--gateway网关依赖-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-gateway</artifactId>
+                <version>${spring-cloud-starter-gateway}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
